<resources>
    <string name="app_name">FinanseApp</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_source_name">Enter source name</string>
    <string name="name">Name</string>
    <string name="enter_expense_name">Enter expense name</string>
    <string name="enter_account_name">Enter account name</string>
    <string name="enter_starting_amount">Enter starting amount</string>
    <string name="add_account">Add account</string>
    <string name="add_expense">Add expense</string>
    <string name="add_source">Add source</string>
    <string name="add_category">Add category</string>
    <string name="type">Type</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_symbol">€</string>
    <string name="currency_symbol_euro">€</string>
    <string name="currency_symbol_dollar">$</string>
    <string name="currency_symbol_pounds">£</string>
    <string name="currency_symbol_zloty">zł</string>
</resources>