<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomeActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="@color/green_001"
        android:dividerPadding="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:ems="10"
                android:hint="@string/enter_source_name"
                android:inputType="text"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/white_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:ems="10"
                android:hint="@string/enter_amount"
                android:inputType="text"
                android:textColor="@color/white_text"
                android:textColorHint="@color/white_text"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/white_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:text="Income"
                android:textAlignment="center"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/customSwitch"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:minWidth="100dp"
                android:showText="false"
                android:textAlignment="center"
                android:textOff=""
                android:textOn=""
                android:thumb="@drawable/custom_thumb"
                android:track="@drawable/custom_track" />  <!-- Adjusted comment placement -->


            <TextView
                android:id="@+id/textViewExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:text="Expense"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/addButton"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_source"
                android:textColor="@color/green_006" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>