<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_001"
    tools:context=".AddSourceActivity">

    <LinearLayout
        android:id="@+id/linearlayouta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainactivitybackground"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:dividerPadding="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/name_icon" />

            <LinearLayout
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="253dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ticketing"
                    android:text="@string/name"
                    android:textColor="@color/white_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:ems="10"
                    android:fontFamily="@font/ticketing"
                    android:hint="@string/enter_source_name"
                    android:inputType="text"
                    android:textColor="@color/white_text"
                    android:textColorHint="@color/white_text"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/dollarsigngreen" />

            <LinearLayout
                android:layout_width="268dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ticketing"
                    android:text="@string/amount"
                    android:textColor="@color/white_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextAmount"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:ems="10"
                    android:fontFamily="@font/ticketing"
                    android:hint="@string/enter_amount"
                    android:inputType="text"
                    android:textColor="@color/white_text"
                    android:textColorHint="@color/white_text"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="62dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/category_icon" />

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ticketing"
                    android:text="@string/category"
                    android:textColor="@color/white_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/ticketing" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/textViewIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:text="Income"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/ticketing"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/customSwitch"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:minWidth="100dp"
                android:showText="false"
                android:textAlignment="center"
                android:textOff=""
                android:textOn=""
                android:thumb="@drawable/custom_thumb"
                android:track="@drawable/custom_track"
                android:trackTint="@null"
                android:trackTintMode="src_over"
                app:trackTint="@color/black"
                android:fontFamily="@font/ticketing"/>


            <TextView
                android:id="@+id/textViewExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:text="Expense"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/ticketing"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="313dp"
            android:layout_weight="1"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="263dp"
                android:layout_height="224dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/app_logo_coin" />
        </FrameLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ticketing"
                android:text="@string/cancel"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <Button
                android:id="@+id/addButton"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ticketing"
                android:text="@string/add"
                android:textColor="@color/green_006"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>